get build working